<resources>
    <string name="app_name">FlashbackMusic</string>
    <string name="action_settings">Settings</string>
    <string name="normal_text">Normal Mode</string>
    <string name="vibe_text">Vibe Mode</string>
    <string name="library">Your Library</string>
    <string name="playlist">Your Vibe Playlist</string>
    <string name="title_activity_track_mode">TrackMode</string>
    <string name="title_activity_play_list_">PlayList_Activity</string>
    <string name="title_activity_delete">Delete</string>
    <string name="default_info">Friends info will not be available until you sign in.</string>
    <string name="user_info">It was last played by %1s.</string>
    <string name="location_info">It was last played at %1s.</string>
    <string name="time_info">It was last played on %1d/%2d/%3d at %4s:%5s.</string>
    <string name="never_played_info">This is the first time you played this song!</string>
    <string name="mode_normal">Normal</string>
    <string name="mode_vibe">Vibe</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="server_client_id">1034368452402-o4kj68a4gf0c1525af6bv2qoo1ong484.apps.googleusercontent.com</string>
    <string name="server_client_secret">PEI0aAN8HbxhFXtJXVEN5gs3</string>

    <string name="download_folder">/DownloadedSongs/</string>
    <string name="download_album_folder">/DownloadedAlbums/</string>
    <string name="title_activity_pop_up">PopUpActivity</string>

    <string name="menu_recent">Recently Played</string>
    <string name="menu_track">Tracks</string>
    <string name="menu_album">Albums</string>
    <string name="menu_artist">Artists</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_download">Download Music</string>
    <string name="menu_time">Mock time</string>
</resources>
