<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/RecentlyPlayed"
            android:icon="@mipmap/recents"
            android:title="@string/menu_recent">
        </item>

        <item android:id="@+id/Tracks"
            android:icon="@mipmap/tracks"
            android:title="@string/menu_track">
        </item>

        <item android:id="@+id/Albums"
            android:icon="@mipmap/albums"
            android:title="@string/menu_album">
        </item>

        <item android:id="@+id/Artists"
            android:icon="@mipmap/user"
            android:title="@string/menu_artist">
        </item>

        <item android:id="@+id/Favorites"
            android:icon="@mipmap/favorites"
            android:title="@string/menu_favorite">
        </item>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/Download"
            android:icon="@mipmap/download"
            android:title="@string/menu_download">
        </item>

        <item
            android:id="@+id/Time"
            android:icon="@mipmap/mock"
            android:title="@string/menu_time">
        </item>
    </group>

</menu>